# ft_transcendence

./: .editorconfig  .env.example  .gitignore  CLAUDE.md  Gemfile  Makefile  README.md  RONINS.rst  backend-repomix-output.xml  database_relations.txt  databasedetails.txt  docker-compose.yml  frontend-repomix-output.xml  package-lock.json  ping_test.sh  repomix-output.xml
Frontend/frontend-vite/: package-lock.json  package.json
backend/: ,env  .env  .gitignore  Dockerfile  Dockerfile.dev  Gemfile  README.md  README.rst  docker-compose.yml  entrypoint.sh  package-lock.json
backend/ai_adversary/: Dockerfile  EXPLANATION.md  main.py  pyproject.toml
backend/ai_adversary/src/: api.py  chess_adversary.ipynb  classical_eval.py  dataset_generator.py  features.py  nnue.py  search.py  train.py
backend/ai_adversary/tests/: test_engine.py
chessthing/: Makefile  README.md
config/: application.rb  deploy.yml  routes.rb
containers/: Makefile  containers.rst
db/: schema.rb
docs/: 4Junio_repoaactivity.txt  DB_details.md  Plan.rst  Plan_ES.rst  Rol Ajedrez (Motor de Reglas).md  Rol Backend (Rails + Sudoku).md  Rol DevOps (Docker & Infraestructura).md  Rol Frontend.md  Rol IA para Ajedrez.md  Role_DevOps_EN.md  containers.rst
frontend/: .dockerignore  .env  .env.example  Dockerfile  NGINX_example.conf  README.en.md  docker-compose.yml  eslint.config.js  index.html  nginx.conf  package-lock.json  package.json  playwright.config.ts  start.sh  tailwind.config.js  tsconfig.app.json  tsconfig.node.json  vite.config.ts
infra/: Makefile  containers.rst  web_config.txt
(+2038 files in other folders)
