[project]
name = "transcencence-chess"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chess>=1.11.2",
    "fastapi>=0.136.3",
    "httpx>=0.28.1",
    "ipykernel>=7.2.0",
    "numpy>=2.4.6",
    "onnxruntime>=1.26.0",
    "torch>=2.12.0",
    "uvicorn>=0.49.0",
]
